# BinRex

./: .gitignore  README.md  main.go  manifest.json
bins/: README.md
bins/Poto/: app.go  config.toml  go.mod  go.sum  install.sh  main.go  wails.json
bins/Poto/frontend/: package.json  pnpm-lock.yaml
bins/Poto/frontend/Public/docs/: config.md
bins/Poto/frontend/src/: App.tsx  index.css
bins/Poto/frontend/src/components/: HelpDialloge.tsx
bins/ggg/: ggg  gogoagone
bins/gls/: gls
bins/konvert/: konvert
bins/sysup/: install-updates.sh  sysup
bins/uv-linux/: uv-install.sh
bins/websii/: Cargo.toml  README.md  test.html
bins/websii/src/: ipc.rs  main.rs  server_bin.rs
bins/xtract/: xtract
