[package]
name = "websii"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "websii"
path = "src/main.rs"

[[bin]]
name = "websii-server"
path = "src/server_bin.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
notify = "6.1"
mime_guess = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
